sumo/tests/sumo/output/e3/errors/freq_false/detector.sumo
<?xml version="1.0"?>

<!-- generated on 11/20/07 09:51:55 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>1000</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<e3-detector>
   <entry lane="3/1to2/1_0" pos="100.00"/>
   <exit lane="3/1to2/1_0" pos="300.00"/>
</e3-detector>
